--- a/src/pages/installation.astro
+++ b/src/pages/installation.astro
@@ -5,10 +5,9 @@ import CodeBlock from "../components/CodeBlock.astro";
 ---
 
 <Layout title="Instalación - Perseo Ecommerce">
-  <div class="flex min-h-screen bg-gray-50">
-    <Sidebar currentPage="installation" />
+  <div class="flex min-h-screen bg-white">    <Sidebar currentPage="installation" />
 
-    <main class="flex-1 py-8 px-16 ml-64">
+    <main class="flex-1 py-8 px-16 md:ml-64">
       <div class="mx-auto">
         <h1 class="text-4xl font-bold text-gray-900 mb-8">Instalación</h1>
 
