--- a/src/pages/components.astro
+++ b/src/pages/components.astro
@@ -5,9 +5,10 @@ import ComponentExample from "../components/ComponentExample.astro";
 ---
 
 <Layout title="Componentes - Perseo Ecommerce">
-  <div class="flex min-h-screen bg-white">    <Sidebar currentPage="components" />
+  <div class="flex min-h-screen bg-white">
+    <Sidebar currentPage="components" />
 
-    <main class="flex-1 py-8 px-16 md:ml-64">
+    <main class="flex-1 py-8 px-16 ">
       <div class="mx-auto">
         <h1 class="text-4xl font-bold text-gray-900 mb-8">Componentes</h1>
 
