--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,10 +17,10 @@ const { title } = Astro.props;
   </head>
   <body class="bg-white">
     <nav class="bg-white border-b border-gray-200 fixed w-full z-50 top-0">
-      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between h-16">
           <div class="flex items-center">
-            <a href="/" class="flex items-center space-x-2 ml-10" >
+            <a href="/" class="flex items-center space-x-2 ml-10 md:ml-0" >
               <div class="w-8 h-8 bg-blue-600 rounded-lg flex items-center justify-center">
                 <span class="text-white font-bold text-lg">P</span>
               </div>
