--- a/src/pages/installation.astro
+++ b/src/pages/installation.astro
@@ -7,7 +7,7 @@ import CodeBlock from "../components/CodeBlock.astro";
 <Layout title="Instalación - Perseo Ecommerce">
   <div class="flex min-h-screen bg-white">    <Sidebar currentPage="installation" />
 
-    <main class="flex-1 py-8 px-16 md:ml-64">
+    <main class="flex-1 py-8 px-16 ">
       <div class="mx-auto">
         <h1 class="text-4xl font-bold text-gray-900 mb-8">Instalación</h1>
 
