--- a/src/pages/api.astro
+++ b/src/pages/api.astro
@@ -8,7 +8,7 @@ import ApiEndpoint from "../components/ApiEndpoint.astro";
   <div class="flex min-h-screen bg-white">
     <Sidebar currentPage="api" />
 
-    <main class="flex-1 py-8 px-1 ml-2">
+    <main class="flex-1 py-8 px-16">
       <div class="mx-auto">
         <h1 class="text-4xl font-bold text-gray-900 mb-8">API Reference</h1>
 
